--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+  <title>This is a multi-page site</title>  
+</head>
+<body>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> Phasellus vehicula interdum turpis eu tempor. Donec finibus quam ac quam faucibus, id vehicula turpis auctor. Nullam id magna nisi. Suspendisse convallis orci a eros suscipit dignissim. Maecenas nec pharetra ante. Nam vitae tempor ex, id pretium purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer odio turpis, ullamcorper eget nibh ut, elementum molestie orci. Proin vel leo nulla.</p>
+</body>
 </html>
